# metabox-go

./: .gitignore  BUILD.bazel  Makefile  README.md  WORKSPACE  go.mod  go.sum  main.go  repositories.bzl
cmd/: BUILD.bazel  backup.go  main.go  restore.go  root.go
config/: BUILD.bazel  config.go
examples/: .gitignore  backups.txt  default.metabox.yml  ouroboros.metabox.yml
examples/mongodb/: mongodb.metabox.yml
examples/mongodb/hooks/: mongo-backup.sh  mongo-restore.sh
examples/ouroboros/: ouroboros.metabox.yml
examples/showcase/: default.metabox.yml
metabox/: BUILD.bazel  backups.go  compress.go  errors.go  extract.go  hash.go  metabox.go  utils.go
scripts/: generate_build.sh
storage/: BUILD.bazel  errors.go  local.go  remote.go  s3.go  storage.go
tracker/: BUILD.bazel  codec.go  db.go  item.go
