load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "restore.go",
        "root.go",
    ],
    importpath = "github.com/nmcapule/metabox-go/cmd",
    visibility = ["//visibility:public"],
    deps = [
        "//metabox:go_default_library",
        "//tracker:go_default_library",
        "@com_github_spf13_cobra//:go_default_library",
    ],
)
