load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "codec.go",
        "db.go",
        "item.go",
    ],
    importpath = "github.com/nmcapule/metabox-go/tracker",
    visibility = ["//visibility:public"],
    deps = ["@com_github_jszwec_csvutil//:go_default_library"],
)
